<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_scrollview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/endtype_text"
            style="@style/BasicTextView"
            android:text="@string/form_endpoint_type" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/musicpimp_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/musicpimp"
                android:checked="true" />

            <RadioButton
                android:id="@+id/subsonic_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subsonic" />
        </RadioGroup>

        <TextView
            android:id="@+id/end_name_text"
            style="@style/BasicTextView"
            android:text="@string/form_name" />

        <EditText
            android:id="@+id/end_name"
            style="@style/BasicEditText"
            android:inputType="text"
            android:hint="@string/form_name_hint" />

        <TextView
            android:id="@+id/end_host_text"
            style="@style/BasicTextView"
            android:text="@string/form_host" />

        <EditText
            android:id="@+id/end_host"
            style="@style/BasicEditText"
            android:hint="@string/form_host_hint"
            android:inputType="text" />

        <TextView
            android:id="@+id/end_port_text"
            style="@style/BasicTextView"
            android:text="@string/form_port" />

        <EditText
            android:id="@+id/end_port"
            style="@style/BasicEditText"
            android:text="@string/form_port_default"
            android:inputType="number" />

        <TextView
            android:id="@+id/end_username_text"
            style="@style/BasicTextView"
            android:text="@string/form_username" />

        <EditText
            android:id="@+id/end_username"
            style="@style/BasicEditText"
            android:text="@string/form_username_default"
            android:inputType="text" />

        <TextView
            android:id="@+id/end_pass_text"
            style="@style/BasicTextView"
            android:text="@string/form_password" />

        <EditText
            android:id="@+id/end_password"
            style="@style/BasicEditText"
            android:inputType="textPassword" />

        <TextView
            android:id="@+id/protocol_text"
            style="@style/BasicTextView"
            android:text="@string/protocol" />

        <RadioGroup
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/http_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/http"
                android:checked="true" />

            <RadioButton
                android:id="@+id/https_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/https" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/active_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_active_source" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/testingProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:indeterminate="true"
                android:visibility="gone"
                android:layout_marginRight="10dp"
                android:layout_marginEnd="10dp"/>

            <TextView
                android:id="@+id/testFeedback"
                style="@style/BasicTextView"
                android:text="@string/empty_string"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:visibility="invisible" />

        </LinearLayout>

        <Button
            android:id="@+id/test_endpoint_button"
            android:text="@string/test_connectivity_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/submit_endpoint_button"
            android:text="@string/submit_text"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>
</ScrollView>