<?xml version="1.0" encoding="utf-8"?>

<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:pimp="http://schemas.android.com/apk/res-auto">
    <!-- Action buttons -->
    <item android:id="@+id/action_previous"
          android:icon="@drawable/ic_media_previous"
          android:title="@string/action_prev"
          pimp:showAsAction="ifRoom"/>
    <item android:id="@+id/action_play_pause"
          android:icon="@drawable/ic_media_play"
          android:title="@string/action_play"
          pimp:showAsAction="ifRoom"/>
    <item android:id="@+id/action_next"
          android:icon="@drawable/ic_media_next"
          android:title="@string/action_next"
          pimp:showAsAction="ifRoom"/>
    <!-- Action overflow -->
    <!--<item android:id="@+id/action_test"-->
          <!--android:icon="@drawable/ic_menu_help"-->
          <!--android:title="@string/test_text"/>-->
    <item android:id="@+id/action_refresh"
          android:icon="@android:drawable/ic_menu_more"
          android:title="@string/action_refresh"/>
    <item android:id="@+id/action_open_downloads"
          android:icon="@android:drawable/stat_sys_download"
          android:title="@string/action_downloads"/>
    <item android:id="@+id/action_open_prefs"
          android:icon="@drawable/ic_menu_preferences"
          android:title="@string/action_settings"/>
    <item android:id="@+id/action_about"
          android:icon="@drawable/ic_menu_help"
          android:title="@string/action_help"/>
</menu>