<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/alarm_edit_scroll"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    android:padding="10dp">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/time"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/time_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/empty_string"
            android:ems="5" />

        <TextView
            android:text="@string/days"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <CheckedTextView
            android:id="@+id/mon"
            android:text="@string/monday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/tue"
            android:text="@string/tuesday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/wed"
            android:text="@string/wednesday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/thu"
            android:text="@string/thursday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/fri"
            android:text="@string/friday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/sat"
            android:text="@string/saturday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <CheckedTextView
            android:id="@+id/sun"
            android:text="@string/sunday"
            android:textSize="24sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:checkMark="?android:attr/textCheckMark"
            android:paddingStart="?android:attr/listPreferredItemPaddingStart"
            android:paddingEnd="?android:attr/listPreferredItemPaddingEnd" />

        <TextView
            android:text="@string/track"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/track_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textSize="24sp" />

        <ToggleButton
            android:id="@+id/enabled_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOn="@string/enabled"
            android:textOff="@string/disabled" />

        <Button
            android:id="@+id/playPauseButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/play_now" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/submit_text" />
    </LinearLayout>
</ScrollView>